# jaka_close_contro

./: .gitignore  CMakeLists.txt  README.md  build_without_ros.sh  package.xml
config/: cube_faces_4robots.yaml  cube_faces_current.yaml  cube_faces_ideal.yaml  cube_fusion_debug.csv  jaka1_world_robot_calibration_pose.csv  jaka2_world_robot_calibration_pose.csv  jaka4_world_robot_calibration_pose.csv  joint_calib_samples.csv  robots.yaml  tool_offset_current.yaml  world_robot_calib_dataset_jaka1_1767078470.csv  world_robot_calib_dataset_jaka1_1767344301.csv  world_robot_calib_dataset_jaka2_1767066328.csv  world_robot_extrinsic.yaml  world_robot_extrinsic_offline_jaka1.yaml  world_robot_extrinsic_offline_jaka2.yaml  world_robot_extrinsic_offline_jaka4.yaml
include/jaka_close_contro/: cube_geometry_utils.h
launch/: closed_loop_system.launch  cube_fusion_debug.launch  cube_fusion_debug_select_cube.launch  cube_fusion_rviz_check.launch  cube_nominal_compare.launch  full_system.launch  hand_eye_calibration.launch  jaka_sdk_bringup.launch  jaka_sdk_bringup_multi.launch  multi_arm_closed_loop.launch  multi_arm_pose_servo_world.launch  single_arm_pose_servo_world.launch  world_robot_autocalib_motion.launch  world_robot_calib_record.launch  world_robot_calibration.launch  world_robot_closedloop.launch  world_robot_selfcheck.launch  world_tag.launch
msg/: CubeFusionStats.msg
rviz/: cube_fusion_debug.rviz
scripts/: calibrate_world_robot.py  calibration_procedure.sh  get_cube_pose_world.py  offline_calibrate_world_robot.py  record_world_robot_dataset.py  send_world_target.py  tf_to_pose_stamped_node.py  world_robot_calib_offline.py
src/: calibration_node.cpp  closed_loop_control_node.cpp  cube_aruco_detector_node.cpp  cube_fusion_debug_node.cpp  cube_multi_face_fusion_node.cpp  cube_nominal_compare_node.cpp  cube_world_closedloop_node.cpp  fiducial_relay_node.cpp  jaka_sdk_driver_node.cpp  jaka_state_adapter_node.cpp  pose_servo_world_node.cpp  world_robot_autocalib_manager_node.cpp  world_robot_calib_motion_node.cpp  world_robot_calib_recorder_node.cpp  world_robot_calibration_node.cpp  world_robot_extrinsic_broadcaster_node.cpp  world_tag_node.cpp
srv/: GetCubePoseWorld.srv  JointMove.srv  SetPoseTarget.srv  WorldRobotCalibration.srv  WorldRobotCollectSample.srv
