<?xml version="1.0"?>
<package format="2">
  <name>jaka_close_contro</name>
  <version>1.0.0</version>
  <description>JAKA ZU3 visual servoing system with integrated world coordinate definition</description>
  
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- 核心依赖 -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>fiducial_msgs</build_depend>
  <build_depend>zed_wrapper</build_depend>
  <build_depend>jaka_sdk_driver</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>fiducial_msgs</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>
  <exec_depend>jaka_sdk_driver</exec_depend>
  
  <!-- 计算机视觉依赖 -->
  <build_depend>opencv3</build_depend>
  <exec_depend>opencv3</exec_depend>
  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>
  
  <!-- YAML 和 Ceres 依赖 -->
  <build_depend>yaml-cpp</build_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <build_depend>ceres-solver</build_depend>
  <exec_depend>ceres-solver</exec_depend>
  <build_depend>libgoogle-glog-dev</build_depend>
  <exec_depend>libgoogle-glog-dev</exec_depend>
  <build_depend>libgflags-dev</build_depend>
  <exec_depend>libgflags-dev</exec_depend>

</package>